--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "bolt-theme",
     "keywords": ["theme", "foundation", "responsive", "sass"],
     "require": {
-        "bolt/bolt": ">=2.0.0,<3.0.0"
+        "bolt/bolt": "^3.0"
     },
     "license": "Attribution-ShareAlike 4.0 International (CC BY-SA 4.0)",
     "authors": [
